--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
-    "start:dev": "nest start --watch"
+    "start:dev": "nest start --watch",
+    "baseline": "tsx scripts/baseline-migrations.ts",
+    "migrate:deploy": "prisma migrate deploy",
+    "db:setup": "tsx scripts/setup-db.ts",
+    "db:seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
