--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
 services:
   - type: web
     name: hellolocal-frontend
-    env: static
+    env: node
     buildCommand: cd apps/web && pnpm install && pnpm build
-    staticPublishPath: apps/web/dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+    startCommand: node apps/web/server.js
+    envVars:
+      - key: NODE_ENV
+        value: production
 
