--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,9 @@
     "baseline": "tsx scripts/baseline-migrations.ts",
     "migrate:deploy": "prisma migrate deploy",
     "db:setup": "tsx scripts/setup-db.ts",
-    "db:seed": "prisma db seed"
+    "db:seed": "prisma db seed",
+    "generate": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
