--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -11,7 +11,11 @@
       "esModuleInterop": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "typeRoots": ["./node_modules/@types", "../node_modules/@types"],
+      "paths": {
+        "@prisma/client": ["./node_modules/@prisma/client"]
+      }
     },
     "include": ["src/**/*.ts"]
   }
