--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,9 @@
     "build": "vite build",
     "build:check": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -38,6 +41,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "@types/maplibre-gl": "^1.14.0"
+    "@types/maplibre-gl": "^1.14.0",
+    "prettier": "^3.4.2"
   }
 }
