--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,21 +15,23 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
-    "express": "^4.18.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.11.0",
+    "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
-    "@tiptap/extension-placeholder": "^2.1.13",
-    "maplibre-gl": "^3.6.2",
-    "react-map-gl": "^7.1.7",
+    "express": "^4.18.2",
     "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "maplibre-gl": "^3.6.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-i18next": "^14.0.0",
-    "i18next-browser-languagedetector": "^7.2.0"
+    "react-map-gl": "^7.1.7",
+    "react-router-dom": "^7.11.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/maplibre-gl": "^1.14.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -38,10 +40,9 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "prettier": "^3.4.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4",
-    "@types/maplibre-gl": "^1.14.0",
-    "prettier": "^3.4.2"
+    "vite": "^7.2.4"
   }
 }
