--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
     "@types/node": "^24.10.4",
     "@types/passport-jwt": "^4.0.1",
     "@types/qrcode": "^1.5.6",
