fix multiple tenant map, show my location feature

--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -12,3 +12,6 @@ VITE_VAPID_PUBLIC_KEY=your-vapid-public-key
 # VITE_GA_TRACKING_ID=UA-XXXXXXXXX-X
 # VITE_PLAUSIBLE_DOMAIN=yourdomain.com
 
+# Maximum distance in km to show distance information for markers (default: 10)
+# VITE_MAX_DISTANCE_KM=10
+
