nyitvatartás, kontextus alapú szűrők

--- a/env.example
+++ b/env.example
@@ -8,7 +8,8 @@ DB_PORT=5432
 # API
 API_PORT=3002
 JWT_SECRET=change-this-super-secret-jwt-key-in-production
-JWT_EXPIRES_IN=7d
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
 
 # Frontend
 WEB_PORT=80
