editor html fields

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
+    "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "express": "^4.18.2",
