cloudinary cdn integration to richtext editor

--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -15,3 +15,9 @@ VITE_VAPID_PUBLIC_KEY=your-vapid-public-key
 # Maximum distance in km to show distance information for markers (default: 10)
 # VITE_MAX_DISTANCE_KM=10
 
+# Cloudinary CDN (for image/video uploads in TipTap editor)
+# Get these from https://cloudinary.com dashboard
+# VITE_CLOUDINARY_CLOUD_NAME=your_cloud_name
+# VITE_CLOUDINARY_API_KEY=your_api_key
+# VITE_CLOUDINARY_UPLOAD_PRESET=your_upload_preset_name
+
