--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^14.0.0",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^7.11.0",
+    "recharts": "^2.15.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
