--- a/env.example
+++ b/env.example
@@ -22,3 +22,9 @@ VAPID_PUBLIC_KEY=
 VAPID_PRIVATE_KEY=
 VAPID_SUBJECT=mailto:admin@hellolocal.com
 
+# Google OAuth (Optional - for Google login/register)
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=http://localhost:3002/api/auth/google/callback
+
