--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "qrcode": "^1.5.4",
@@ -56,6 +57,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^24.10.4",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/qrcode": "^1.5.6",
     "@types/web-push": "^3.6.4",
     "@types/helmet": "^4.0.0",
