--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,7 +33,8 @@
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^7.11.0",
     "recharts": "^2.15.0",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
