--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
     "migrate:deploy": "prisma migrate deploy",
     "migrate:to-brand": "tsx scripts/migrate-to-brand-siteinstance.ts",
     "db:setup": "tsx scripts/setup-db.ts",
+    "db:setup:reset": "tsx scripts/setup-db-with-reset.ts",
     "db:seed": "prisma db seed",
     "db:fix-admin": "tsx scripts/fix-admin-user.ts",
     "generate": "prisma generate && bash scripts/copy-prisma-client.sh",
