--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "db:seed": "prisma db seed",
     "db:activate-sites": "tsx scripts/activate-all-sites.ts",
     "db:ensure-site-keys": "tsx scripts/ensure-site-keys.ts",
+    "db:ensure-default-site": "tsx scripts/ensure-default-site.ts",
     "db:fix-admin": "tsx scripts/fix-admin-user.ts",
     "generate": "prisma generate && bash scripts/copy-prisma-client.sh",
     "postinstall": "prisma generate && bash scripts/copy-prisma-client.sh",
