--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -21,3 +21,7 @@ VITE_VAPID_PUBLIC_KEY=your-vapid-public-key
 # VITE_CLOUDINARY_API_KEY=your_api_key
 # VITE_CLOUDINARY_UPLOAD_PRESET=your_upload_preset_name
 
+# Multi-site mode (default: true)
+# Set to "false" to disable multi-site mode (single-site mode)
+# VITE_HAS_MULTIPLE_SITES=true
+
