--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,8 @@
     "migrate:to-brand": "tsx scripts/migrate-to-brand-siteinstance.ts",
     "db:setup": "tsx scripts/setup-db.ts",
     "db:setup:reset": "tsx scripts/setup-db-with-reset.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:reset:seed": "prisma migrate reset --force && prisma db seed",
     "db:seed": "prisma db seed",
     "db:activate-sites": "tsx scripts/activate-all-sites.ts",
     "db:ensure-site-keys": "tsx scripts/ensure-site-keys.ts",
@@ -21,6 +23,7 @@
     "db:fix-site-keys-and-instances": "tsx scripts/fix-site-keys-and-instances.ts",
     "db:debug-site": "tsx scripts/debug-site.ts",
     "db:fix-all-sites": "tsx scripts/fix-all-sites.ts",
+    "db:fix-duplicate-slugs": "tsx scripts/fix-duplicate-slugs.ts",
     "db:fix-admin": "tsx scripts/fix-admin-user.ts",
     "generate": "prisma generate && bash scripts/copy-prisma-client.sh",
     "postinstall": "prisma generate && bash scripts/copy-prisma-client.sh",
