touch fix on map

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,7 +34,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "UNLICENSED",
+  "license": {
+    "license": "SEE LICENSE IN LICENSE.md"
+  },
   "packageManager": "pnpm@10.27.0",
   "dependencies": {
     "@nestjs/common": "^11.1.11",
