--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,9 +1,11 @@
 {
   "name": "hellolocal-web",
   "private": true,
-  "version": "1.0.1-beta",
+  "version": "1.0.2-beta",
   "type": "module",
-  "license": "UNLICENSED",
+  {
+    "license": "SEE LICENSE IN LICENSE.md"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
