--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,9 +3,7 @@
   "private": true,
   "version": "1.0.2-beta",
   "type": "module",
-  {
-    "license": "SEE LICENSE IN LICENSE.md"
-  },
+  "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
